--- a/css/end.css
+++ b/css/end.css
@@ -7,11 +7,16 @@
     text-decoration: none;
 }
 
+#end #end_kj {
+    margin: 0 auto;
+
+    width: 1200px;
+}
+
 /* ul */
 #end #end_u1 {
     margin: 0 auto;
 
-    width: 70%;
     height: 160px;
 
     text-align: center;
@@ -59,25 +64,31 @@
 }
 
 /* hzhb */
+
+#end #hzhb {
+    width: 1200px;
+}
+
 #end #hzhb p {
     margin-top: 2%;
+
     color: white;
+
     text-align: center;
     font-size: 20px;
 }
 
 #end #hzhb ul {
-    margin: 1% auto;
+    margin: 2% auto;
 
-    width: 60%;
     height: 130px;
 
     list-style: none;
 }
 
 #end #hzhb ul li {
-    margin-left: 8%;
-    margin-top: 2%;
+    margin-right: 9%;
+    margin-top: 1%;
 
     float: left;
 
@@ -88,6 +99,7 @@
 #end #hzhb ul li:nth-child(1) {
     background: url(../images/hzdx/weiruan.png);
     background-size: 50px 50px;
+    margin-left: 7%;
 }
 
 #end #hzhb ul li:nth-child(2) {
@@ -123,6 +135,7 @@
 #end #hzhb ul li:nth-child(8) {
     background: url(../images/hzdx/ibm.png);
     background-size: 50px 50px;
+    margin-left: 7%;
 }
 
 #end #hzhb ul li:nth-child(9) {
@@ -158,7 +171,7 @@
 #end #u3 {
     margin: 2% auto;
 
-    width: 60%;
+    width: 1200px;
     height: 20px;
 
     color: #777;
@@ -167,13 +180,9 @@
 }
 
 #end #u3 li {
-    margin-right: 6%;
+    margin-left: 8%;
 
     float: left;
-}
-
-#end #u3 li:nth-child(1) {
-    margin-right: 80px
 }
 
 #end #u3 li a {
