--- a/css/jsqc.css
+++ b/css/jsqc.css
@@ -1,12 +1,12 @@
 #jsqc {
-    height: 550px;
-
     overflow: hidden;
     display: none;
+
+    height: 1000px;
 }
 
 #jsqc p {
-    margin-top: 20px;
+    margin: 5% 0;
 
     text-align: center;
     font-size: 40px;
@@ -26,7 +26,7 @@
 
 /* u2 */
 #jsqc #jsqc-u2 {
-    margin: -11% auto;
+    margin: -4% auto;
 
     list-style: none;
 
@@ -35,7 +35,7 @@
 }
 
 #jsqc #jsqc-u2 li {
-    margin-right: 30px;
+    margin-left: 30px;
 
     width: 30px;
     height: 30px;
