--- a/css/nuli.css
+++ b/css/nuli.css
@@ -1,21 +1,27 @@
 #nuli #nuli1 {
     margin: 0 auto;
 
-    width: 75%;
+    width: 100%;
 
     text-align: center;
 }
 
-#nuli #nuli1 #p_first {
-    padding-top: 100px;
-    font-size: 40px;
-    font-weight: bold;
+/* nuli1-1 */
+#nuli #nuli1-1 {
+    margin: 0 auto;
+
+    width: 1200px;
+    height: 200px;
 }
 
-#nuli #nuli1 p .s1 {
-    margin: -7% 70%;
+#nuli #nuli1-1 p {
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 200px;
+}
 
-    display: block;
+#nuli #nuli1-1 div {
+    margin: -160px 820px;
 
     width: 80px;
     height: 60px;
@@ -23,20 +29,20 @@
     line-height: 60px;
     font-size: 20px;
     font-weight: bold;
-
     color: white;
+
     background: #ff705b;
 }
 
 /* ul */
 #nuli #nuli1 ul {
-    margin: 140px 0;
+    margin: 0 auto;
 
     list-style: none;
 
     overflow: hidden;
 
-    width: 100%;
+    width: 1200px;
     height: 200px;
 }
 
@@ -75,6 +81,19 @@
     background-size: 90px 90px;
 }
 
+/* nuli1-2 */
+#nuli #nuli1-2 {
+    margin: 0 auto;
+
+    width: 1200px;
+    height: 200px;
+}
+
+#nuli #nuli1-2 p {
+    font-size: 40px;
+    line-height: 200px;
+}
+
 /* p */
 #nuli #nuli1 span {
     color: #ff705b;
@@ -91,34 +110,39 @@
     font-weight: bold;
 }
 
-#nuli #nuli1 .p2 {
-    margin: -10% auto;
-
-    font-size: 40px;
-}
-
 /* yes */
 #nuli #nuli1 .yes {
-    margin: 14% auto;
-    width: 30%;
-    height: 60px;
+    width: 100%;
+    height: 200px;
+}
+
+#nuli #nuli1 .yes #yes-1 {
+    margin: 0 auto;
+
+    width: 700px;
+    height: 100px;
+
     border: solid 3px black;
     border-radius: 50px;
-    font-size: 40px;
-    line-height: 75px;
+
     transition: .5s;
 }
 
-#nuli #nuli1 .yes a {
-    color: #666;
-    text-decoration: none;
-    transition: 1s;
-}
-
-#nuli #nuli1 .yes:hover {
+#nuli #nuli1 .yes #yes-1:hover {
     background: black;
 }
 
-#nuli #nuli1 .yes:hover a {
+#nuli #nuli1 .yes #yes-1 a {
+    color: #666;
+
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 110px;
+    text-decoration: none;
+
+    transition: 1s;
+}
+
+#nuli #nuli1 .yes #yes-1:hover a {
     color: #ff705b;
 }
