--- a/css/ydff.css
+++ b/css/ydff.css
@@ -4,7 +4,7 @@
 
 /* p1 */
 #ydff #p1 {
-    padding: 3% 0;
+    padding: 5% 0;
 
     text-align: center;
     font-size: 40px;
@@ -13,13 +13,12 @@
 /* ul */
 #ydff ul {
     margin: 0 auto;
-    padding-bottom: 5%;
+    padding-bottom: 10%;
     overflow: hidden;
 
     list-style: none;
 
-    width: 75%;
-    height: 450px;
+    width: 1200px;
 }
 
 #ydff ul li {
