--- a/css/jsqc.css
+++ b/css/jsqc.css
@@ -27,7 +27,6 @@
 /* u2 */
 #jsqc #jsqc-u2 {
     margin: -4% auto;
-
     list-style: none;
 
     width: 400px;
@@ -36,16 +35,18 @@
 
 #jsqc #jsqc-u2 li {
     margin-left: 30px;
+    float: left;
 
     width: 30px;
     height: 30px;
-    float: left;
 
+    border: solid 1px orange;
     border-radius: 30px;
-    background-color: rgba(255, 255, 255, .5);
-    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, .3);
+    background-color: rgba(255, 255, 255, .4);
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .3);
 }
 
 #jsqc #jsqc-u2 li:first-child {
-    background-color: rgba(0, 255, 255, .5);
+    background-color: rgba(255, 0, 0, .7);
+    border: solid 1px rgba(255, 0, 0, .7);
 }
