--- a/css/goTop.css
+++ b/css/goTop.css
@@ -17,18 +17,16 @@
 }
 
 #goTop span {
-    margin: 0 auto;
+    margin: 10% auto;
 
     display: block;
 
     width: 60%;
-    height: 100%;
 
     text-align: center;
 
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
-    line-height: 65px;
 
     color: black;
 
