--- a/css/ydff.css
+++ b/css/ydff.css
@@ -4,7 +4,7 @@
 
 /* p1 */
 #ydff #p1 {
-    padding: 5% 0;
+    padding: 2% 0;
 
     text-align: center;
     font-size: 40px;
@@ -13,8 +13,7 @@
 /* ul */
 #ydff ul {
     margin: 0 auto;
-    padding-bottom: 10%;
-    overflow: hidden;
+    background-color: red;
 
     list-style: none;
 
