--- a/css/ydff.css
+++ b/css/ydff.css
@@ -1,10 +1,12 @@
 #ydff {
+    width: 100%;
+
     background-color: #e1e1e2;
 }
 
 /* p1 */
 #ydff #p1 {
-    padding: 2% 0;
+    padding: 3% 0;
 
     text-align: center;
     font-size: 40px;
@@ -13,11 +15,12 @@
 /* ul */
 #ydff ul {
     margin: 0 auto;
-    background-color: red;
+    padding-bottom: 7%;
 
     list-style: none;
 
     width: 1200px;
+    height: 500px;
 }
 
 #ydff ul li {
