--- a/css/jsqc.css
+++ b/css/jsqc.css
@@ -42,6 +42,8 @@
     border-radius: 30px;
     background-color: rgba(255, 255, 255, .4);
     box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .3);
+
+    transition: .7s;
 }
 
 #jsqc #jsqc-u2 li:first-child {
