--- a/css/end.css
+++ b/css/end.css
@@ -64,9 +64,10 @@
 }
 
 /* hzhb */
-
 #end #hzhb {
-    width: 1200px;
+    margin: 0 auto;
+
+    width: 1000px;
 }
 
 #end #hzhb p {
@@ -81,13 +82,13 @@
 #end #hzhb ul {
     margin: 2% auto;
 
-    height: 130px;
+    height: 140px;
 
     list-style: none;
 }
 
 #end #hzhb ul li {
-    margin-right: 9%;
+    margin-left: 8%;
     margin-top: 1%;
 
     float: left;
@@ -96,78 +97,12 @@
     height: 50px;
 }
 
-#end #hzhb ul li:nth-child(1) {
-    background: url(../images/hzdx/weiruan.png);
-    background-size: 50px 50px;
-    margin-left: 7%;
+#end #hzhb ul li img {
+    width: 100%;
+    height: 100%;
 }
 
-#end #hzhb ul li:nth-child(2) {
-    background: url(../images/hzdx/guge.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(3) {
-    background: url(../images/hzdx/pingguo.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(4) {
-    background: url(../images/hzdx/intel.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(5) {
-    background: url(../images/hzdx/AMD.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(6) {
-    background: url(../images/hzdx/huipu.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(7) {
-    background: url(../images/hzdx/xiaomi.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(8) {
-    background: url(../images/hzdx/ibm.png);
-    background-size: 50px 50px;
-    margin-left: 7%;
-}
-
-#end #hzhb ul li:nth-child(9) {
-    background: url(../images/hzdx/huawei.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(10) {
-    background: url(../images/hzdx/yamaxun.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(11) {
-    background: url(../images/hzdx/tengxun.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(12) {
-    background: url(../images/hzdx/ali.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(13) {
-    background: url(../images/hzdx/nvidia.png);
-    background-size: 50px 50px;
-}
-
-#end #hzhb ul li:nth-child(14) {
-    background: url(../images/hzdx/daier.png);
-    background-size: 50px 50px;
-}
-
+/* u3 */
 #end #u3 {
     margin: 2% auto;
 
