--- a/css/goTop.css
+++ b/css/goTop.css
@@ -16,7 +16,7 @@
     transition: .7s;
 }
 
-#goTop span {
+#goTop a {
     margin: 10% auto;
 
     display: block;
@@ -24,6 +24,7 @@
     width: 60%;
 
     text-align: center;
+    text-decoration: none;
 
     font-size: 20px;
     font-weight: bold;
@@ -39,6 +40,6 @@
 
 }
 
-#goTop:hover span {
+#goTop:hover a {
     color: orange;
 }
