--- a/css/top.css
+++ b/css/top.css
@@ -7,6 +7,8 @@
     height: 7%;
 
     background-color: rgba(0, 0, 0, .6);
+
+    transition: .4s;
 }
 
 #top ul {
@@ -18,7 +20,6 @@
     width: 50%;
     height: 100%;
 
-    line-height: 60px;
     list-style: none;
 
     overflow: hidden;
@@ -26,13 +27,25 @@
 
 /* top_left */
 #top #top_left li {
+    margin-top: 1%;
+    margin-right: 3%;
+
     float: left;
 
     width: 10%;
-    height: 100%;
+    height: 70%;
 
     text-align: center;
-    line-height: 350%;
+    line-height: 40px;
+
+    border-top: solid 2px rgba(0, 0, 0, 0);
+    border-radius: 120px;
+
+    transition: .5s;
+}
+
+#top #top_left li:hover {
+    border-top: solid 2px white;
 }
 
 #top #top_left li a {
@@ -46,24 +59,29 @@
 
 #top #top_left li a:hover {
     color: #87CEFA;
-    font-size: 30px;
 }
 
 #top #top_left li a img {
-    width: 50px;
-    height: 45px;
+    width: 50%;
+    height: 100%;
 }
 
 /* top_right */
 #top #top_right a {
     margin-left: 11%;
-    line-height: 250%;
+    line-height: 60px;
 
     color: white;
 
     font-size: 24px;
     font-weight: bold;
     text-decoration: none;
+
+    transition: .5s;
+}
+
+#top #top_right a:hover {
+    color: #87CEFA;
 }
 
 #top #top_right input {
@@ -100,13 +118,26 @@
 }
 
 #top #top_right_search li {
-    margin-top: 20%;
+    margin: 13% auto;
     overflow: hidden;
 
-    height: 19%;
+    width: 90%;
+    height: 16%;
 
+    line-height: 50px;
     text-align: center;
     font-size: 25px;
     color: white;
     font-weight: bold;
+
+    border-left: solid 2px rgba(0, 0, 0, 0);
+    border-right: solid 2px rgba(0, 0, 0, 0);
+    border-radius: 9px;
+
+    transition: .5s;
+}
+
+#top #top_right_search li:hover {
+    border-left: solid 2px white;
+    border-right: solid 2px white;
 }
