--- a/css/jsqc.css
+++ b/css/jsqc.css
@@ -4,49 +4,54 @@
 }
 
 #jsqc p {
-    margin: 2% 0;
+    margin: 3% 0;
 
     text-align: center;
     font-size: 40px;
 }
 
-/* img */
-#jsqc #jsqc-img {
+#jsqc #imgBox {
     margin: 0 auto;
-    margin-top: 20px;
-
     width: 1200px;
     height: 550px;
-
     box-shadow: 0 0 20px 2px #aaa;
-    background-image: url('../images/jsqc/p1.png');
+    overflow: hidden;
+    position: relative;
 }
 
-/* u2 */
-#jsqc #jsqc-u2 {
-    margin: -4% auto;
-    list-style: none;
-
-    width: 400px;
-    height: 30px;
+#jsqc #imgBoxList {
+    margin: 0 auto;
+    width: 7200px;
+    height: 550px;
 }
 
-#jsqc #jsqc-u2 li {
-    margin-left: 30px;
+#jsqc #imgBoxList img {
     float: left;
+}
 
+#jsqc ul {
+    width: 510px;
+    position: absolute;
+    right: 25%;
+    bottom: 5%;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+#jsqc li {
     width: 30px;
     height: 30px;
 
-    border: solid 1px orange;
-    border-radius: 30px;
     background-color: rgba(255, 255, 255, .4);
     box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .3);
+    border: solid 2px orange;
+    border-radius: 50%;
 
     transition: .7s;
 }
 
-#jsqc #jsqc-u2 li:first-child {
+#jsqc li.active {
     background-color: rgba(255, 0, 0, .7);
-    border: solid 1px rgba(255, 0, 0, .7);
+    border: solid 2px rgba(255, 0, 0, .7);
 }
